--- a/Halloapp/el.lproj/Localizable.strings
+++ b/Halloapp/el.lproj/Localizable.strings
@@ -684,10 +684,10 @@
 /* Accessibility label for X (Close) button in media editor. */
 "media.voiceover.button.close" = "Κλείσιμο";
 
-/* Accessibility label for a button in media composer. Refers to photo / video editing action. */
+/* Accessibility label for a button in media editor. Refers to media editing action. */
 "media.voiceover.button.flip" = "Γύρισμα";
 
-/* Accessibility label for a button in media composer. Refers to photo / video editing action. */
+/* Accessibility label for a button in media editor. Refers to media editing action. */
 "media.voiceover.button.rotate" = "Περιστροφή";
 
 /* Message action. Verb. */
@@ -1213,15 +1213,6 @@
 
 /* No comment provided by engineer. */
 "VIDEO" = "ΒΙΝΤΕΟ";
-
-/* Button title. Refers to resetting video to original version. */
-"video.edit.button.reset" = "Επαναφορά";
-
-/* Message in video edit when the processing fails. */
-"video.processing.failed.message" = "Παρακαλούμε προσπάθησε ξανά ή επίλεξε ένα άλλο βίντεο";
-
-/* Alert title in video edit when the processing fails. */
-"video.processing.failed.title" = "Δεν ήταν δυνατή η επεξεργασία του βίντεο";
 
 /* Title for the button that confirms intent to delete your own post. */
 "your.post.deletepost.button" = "Διαγραφή δημοσίευσης";
