--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -684,10 +684,10 @@
 /* Accessibility label for X (Close) button in media editor. */
 "media.voiceover.button.close" = "Fechar";
 
-/* Accessibility label for a button in media composer. Refers to photo / video editing action. */
+/* Accessibility label for a button in media editor. Refers to media editing action. */
 "media.voiceover.button.flip" = "Virar";
 
-/* Accessibility label for a button in media composer. Refers to photo / video editing action. */
+/* Accessibility label for a button in media editor. Refers to media editing action. */
 "media.voiceover.button.rotate" = "Girar";
 
 /* Message action. Verb. */
@@ -1213,15 +1213,6 @@
 
 /* No comment provided by engineer. */
 "VIDEO" = "VÍDEO";
-
-/* Button title. Refers to resetting video to original version. */
-"video.edit.button.reset" = "Redefinir";
-
-/* Message in video edit when the processing fails. */
-"video.processing.failed.message" = "Por favor, tente novamente ou selecione outro vídeo";
-
-/* Alert title in video edit when the processing fails. */
-"video.processing.failed.title" = "Falha no processamento do vídeo";
 
 /* Title for the button that confirms intent to delete your own post. */
 "your.post.deletepost.button" = "Excluir postagem";
